main struct ready.

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -1,4 +1,5 @@
 {
   "app_name": "Titan",
-  "network_request_err": "Network request error, code: $code"
+  "network_request_err": "Network request error, code: $code",
+  "offline_map": "Offline map"
 }
