--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -1,4 +1,5 @@
 {
   "app_name": "泰坦",
-  "network_request_err": "网络请求错误,状态码: $code"
+  "network_request_err": "网络请求错误,状态码: $code",
+  "offline_map": "离线地图"
 }
