--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -11,14 +11,14 @@
   "km": "${km}公里",
   "distance": "${distance}米",
   "my_position": "我的位置",
-  "official_website": "Official Website",
-  "forum": "Forum",
-  "telegram": "Telegram",
-  "twitterhyperion": "Twitter-Hyperion",
-  "twittertitan": "Twitter-Titan",
+  "official_website": "官网",
+  "forum": "论坛",
+  "telegram": "电报群",
+  "twitterhyperion": "推特-海伯利安",
+  "twittertitan": "推特-泰坦",
   "medium": "Medium",
-  "wechat": "Wechat",
-  "wechat_official_account": "Wechat Official Account",
+  "wechat": "公众号",
+  "wechat_official_account": "服务号",
   "telegram_operator": "Telegram Operator",
   "wechat_cs": "微信客服",
   "new_update_available": "发现新版本",
@@ -26,5 +26,7 @@
   "later": "暂不更新",
   "downloading_update_file": "正在下载更新文件",
   "installation_update_package_failed": "安装更新包失败",
-  "install_now": "马上安装"
+  "install_now": "马上安装",
+  "app_version": "版本",
+  "about_us": "关于我们"
 }
