extract the text to i18n

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -20,7 +20,7 @@
   "wechat": "Wechat",
   "wechat_official_account": "Wechat Official Account",
   "telegram_operator": "Telegram Operator",
-  "wechat_cs": "微信客服",
+  "wechat_cs": "Wechat Operator",
   "new_update_available": "New Update Available",
   "update_now": "Update Now",
   "later": "Later",
@@ -28,5 +28,43 @@
   "installation_update_package_failed": "Installation update package failed",
   "install_now": "Install now",
   "app_version": "Version",
-  "about_us": "About Us"
+  "about_us": "About Us",
+  "nav_my_privacy_map": "My Privacy Map",
+  "main_my_public_key": "My encrypted key(public key)",
+  "public_key_copied": "Public key. copied",
+  "nav_share_app": "Share Titan APP",
+  "nav_about_us": "About us",
+  "search_title": "Search / Decrypt",
+  "key_manager_title": "My encrypted addr.",
+  "manually_refresh": "Refresh Manually",
+  "share": "Share",
+  "tips": "Tips",
+  "refresh_keypaire_message": "Refreshing your public key address will unable to decrypt the previous address received, still continue to refresh?",
+  "cancel": "Cancel",
+  "confirm": "Confirm",
+  "share_qrcode": "Share public key QR Code",
+  "share_fail": "Share Fail",
+  "share_location": "Location share",
+  "driving": "Driving",
+  "cycling": "Cycling",
+  "walking": "Walking",
+  "share_encrypted_location": "Share encrypted location",
+  "add_share_options": "Sharing options",
+  "accept_share_pub_key": "p2p sharing",
+  "receiver_encrypted_address": "receiver encrypted address(public key)",
+  "postscript": "Notes",
+  "postscript_hint": "within 50 character",
+  "public_key_scan_fail_rescan": "public key error, please re-scan",
+  "open_camera": "Please enable camera permissions",
+  "unknown_error": "Unknown error",
+  "share_invalid_public_key": "Invalid public key",
+  "encrypt_error": "encrypt error",
+  "label": "Label",
+  "telphone": "Phone No.",
+  "search_empty_data": "No Data",
+  "decrypt_location_cipher_tips": "How to decode positional ciphertext？",
+  "decrypt_location_cipher_tips_context": "Please paste ciphertext, click enter to decode.",
+  "input_search_keyworod_or_cipher": "Enter search keyword/ciphertext",
+  "search_history": "History",
+  "clean_search_history": "Clean History"
 }
