--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -28,5 +28,43 @@
   "installation_update_package_failed": "安装更新包失败",
   "install_now": "马上安装",
   "app_version": "版本",
-  "about_us": "关于我们"
+  "about_us": "关于我们",
+  "nav_my_privacy_map": "我的隐私地图",
+  "main_my_public_key": "我的加密地址(公钥)",
+  "public_key_copied": "公钥地址已复制",
+  "nav_share_app": "分享App",
+  "nav_about_us": "关于我们",
+  "search_title": "搜索 / 解码",
+  "key_manager_title": "我的加密地址",
+  "manually_refresh": "手动刷新",
+  "share": "分享",
+  "tips": "提示",
+  "refresh_keypaire_message": "刷新公钥地址后，之前的接收的位置密文将永久解密不了！确定继续刷新吗？",
+  "cancel": "取消",
+  "confirm": "确定",
+  "share_qrcode": "分享公钥二维码",
+  "share_fail": "分享发生错误",
+  "share_location": "位置分享",
+  "driving": "驾车",
+  "cycling": "骑行",
+  "walking": "步行",
+  "share_encrypted_location": "分享加密位置",
+  "add_share_options": "分享选项",
+  "accept_share_pub_key": "点对点分享",
+  "receiver_encrypted_address": "接收者加密地址（公钥）",
+  "postscript": "附言",
+  "postscript_hint": "输入附言（50字内）",
+  "public_key_scan_fail_rescan": "公钥有误，请重新扫描",
+  "open_camera": "请开启相机权限",
+  "unknown_error": "Unknown error",
+  "share_invalid_public_key": "无效的公钥",
+  "encrypt_error": "加密失败",
+  "label": "标签",
+  "telphone": "电话",
+  "search_empty_data": "暂无数据",
+  "decrypt_location_cipher_tips": "怎么解码位置密文？",
+  "decrypt_location_cipher_tips_context": "请粘贴位置密文，点击搜索即可解码密文。",
+  "input_search_keyworod_or_cipher": "输入搜索词 / 密文",
+  "search_history": "历史搜索",
+  "clean_search_history": "清除记录"
 }
