--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -71,5 +71,14 @@
   "refresh_public_key_days_tips": "Automatically refresh in %d days",
   "refresh_public_key_hours_tips": "Automatically refresh in %d hrs %d mins",
   "refresh_public_key_minutes_tips": "Automatically refresh in %d mins",
-  "refresh_public_key_seconds_tips": "Automatically refresh in %d secs"
+  "refresh_public_key_seconds_tips": "Automatically refresh in %d secs",
+  "improvement_plan_message": "Tell us what you think about Titan product by participating in\n        our user experience plan. Check for more details.\n        <b>\n            <a href=\"https://www.hyn.space/titan/privacy_policy/\">Titan Privacy Policy</a>\n        </b>",
+  "improvement_plan_agree": "Participate",
+  "improvement_plan_refuse": "Not participate",
+  "improvement_plan_title": "Titan improvement plan",
+  "skip": "Skip",
+  "Next": "Next",
+  "enter": "Enter",
+  "copyed": "Copyed",
+  "Clean": "Clean"
 }
