show map store item from server

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -80,5 +80,6 @@
   "Next": "Next",
   "enter": "Enter",
   "copyed": "Copyed",
-  "Clean": "Clean"
+  "Clean": "Clean",
+  "map_store": "Map Store"
 }
