--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -95,5 +95,9 @@
   "monthly_payment": "一个月有效",
   "time": "营业时间",
   "services": "服务",
-  "remark": "备注"
+  "remark": "备注",
+  "buy_more_map": "购买更多地图",
+  "click_to_purchase": "点击前往购买",
+  "empty_map_notice_message": "你尚未购买任何地图",
+  "your_purchased_map": "您购买的地图"
 }
