fix click show big search marker then click empty map cannot return search result

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -91,7 +91,7 @@
   "pay": "Pay",
   "ordering": "Ordering...",
   "waiting_for_payment_result": "Waiting for payment result...",
-  "payment_successful": "Payment successful",
+  "payment_successful": "Purchase successful",
   "monthly_payment": " One Month Valid",
   "time": "Time",
   "services": "Services",
