modify applicaton chinese name

--- a/android/app/src/main/res/values-zh-rCN/strings.xml
+++ b/android/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MapRich</string>
+    <string name="app_name">泰坦掘金</string>
 
     <string name="qrcode_scan_qrcode">扫描二维码</string>
     <string name="qrcode_scan_tips">将条码放入框内，即可自动扫描</string>
