--- a/ios/Runner/zh-Hans.lproj/InfoPlist.strings
+++ b/ios/Runner/zh-Hans.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
   Created by moo on 2019/7/29.
   Copyright © 2019 The Chromium Authors. All rights reserved.
 */
-CFBundleDisplayName = "Titan";
+CFBundleDisplayName = "泰坦掘金";
 NSLocationAlwaysAndWhenInUseUsageDescription = "用于显示您当前的位置和导航";
 NSLocationWhenInUseUsageDescription = "用于显示您当前的位置和导航";
 NSLocationAlwaysUsageDescription = "用于显示您当前的位置和导航";
