add home page translate

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -99,5 +99,29 @@
   "buy_more_map": "Buy More Map",
   "click_to_purchase": "Click to purchase",
   "empty_map_notice_message": "You haven't purchase any maps",
-  "your_purchased_map": "Your purchased map"
+  "your_purchased_map": "Your purchased map",
+  "search_or_decode": "Search / Decrypt ",
+  "map3_global_nodes": "Map3 Global Nodes",
+  "global_nodes": "Global Nodes",
+  "global_map_server_nodes": "Global Map Server Nodes",
+  "Hyperion": "Hyperion",
+  "project_introduction": "Project Introduction",
+  "data_contribute": "Data Contribute",
+  "data_contribute_reward": "贡献地图数据获得HYN奖励",
+  "coming_soon": "Coming Soon",
+  "foods": "Foods",
+  "hotel": "Hotel",
+  "attraction": "Attraction",
+  "paking": "Parking",
+  "gas_station": "Gas Station",
+  "bank": "Bank",
+  "supermarket": "SuperMarket",
+  "mall": "Mall",
+  "toilet": "Toilet",
+  "internet_bar": "Internet Bar",
+  "home_page": "Home",
+  "wallet": "Wallet",
+  "discover": "Discover",
+  "information": "Information",
+  "my_page": "My"
 }
