--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -99,5 +99,29 @@
   "buy_more_map": "购买更多地图",
   "click_to_purchase": "点击前往购买",
   "empty_map_notice_message": "你尚未购买任何地图",
-  "your_purchased_map": "您购买的地图"
+  "your_purchased_map": "您购买的地图",
+  "search_or_decode": "搜索 / 解码位置密文",
+  "map3_global_nodes": "map3全球节点",
+  "global_nodes": "全球节点",
+  "global_map_server_nodes": "全球地图服务节点",
+  "Hyperion": "海伯利安",
+  "project_introduction": "项目介绍",
+  "data_contribute": "数据贡献",
+  "data_contribute_reward": "贡献地图数据获得HYN奖励",
+  "coming_soon": "即将开放",
+  "foods": "美食",
+  "hotel": "酒店",
+  "attraction": "景点",
+  "paking": "停车场",
+  "gas_station": "加油站",
+  "bank": "银行",
+  "supermarket": "超市",
+  "mall": "商场",
+  "toilet": "厕所",
+  "internet_bar": "网吧",
+  "home_page": "首页",
+  "wallet": "钱包",
+  "discover": "发现",
+  "information": "资讯",
+  "my_page": "我的"
 }
