add create page translate

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -107,7 +107,7 @@
   "Hyperion": "Hyperion",
   "project_introduction": "Project Introduction",
   "data_contribute": "Data Contribute",
-  "data_contribute_reward": "贡献地图数据获得HYN奖励",
+  "data_contribute_reward": "Contribute map data to get HYN rewards",
   "coming_soon": "Coming Soon",
   "foods": "Foods",
   "hotel": "Hotel",
@@ -123,5 +123,39 @@
   "wallet": "Wallet",
   "discover": "Discover",
   "information": "Information",
-  "my_page": "My"
+  "my_page": "My",
+  "hyn_market": "HYN Market",
+  "view_all": "View All",
+  "hyn_price": "HYN Price",
+  "online_exchange": "Online Exchange",
+  "rmb": "RMB",
+  "map3_node_introduction": "Mp3 Node",
+  "private_and_safety": "Private and Safety",
+  "create_wallet": "Create Wallet",
+  "import_wallet": "Import Wallet",
+  "private_wallet_tips": "Private key never leaves your device",
+  "create_wallet_tips": "Create a private account",
+  "create_wallet_name_label": "Wallet Name",
+  "input_wallet_name_hint": "Please input wallet name",
+  "input_wallet_name_length_hint": "Please enter a name within 6 characters",
+  "create_wallet_password_label": "Wallet Password",
+  "input_wallet_password_length_hint": "Please enter a wallet password of at least 6 characters",
+  "reinput_wallet_password_label": "Confirm Wallet Password",
+  "input_password_again_hint": "Please enter the password again",
+  "password_not_equal_hint": "Inconsistent passwords",
+  "input_confirm_wallet_password_hint": "Please re-enter a wallet password of at least 6 characters",
+  "next": "continue",
+  "account_backup_notice": "Back up your account now",
+  "account_backup_next_step_notice": "In the next step you will see 12 words that allow you to recover your account",
+  "lossz_wallet_mnemonic_notice": "I understand that if I lose the recovery word, I will not be able to access my wallet",
+  "continue_text": "Continue",
+  "your_mnemonic": "Your Mnemonic",
+  "save_mnemonic_notice": "Write down or copy these words in the correct order and keep them in a safe place.",
+  "save_mnemonic_safe_notice": "Never share the mnemonic with anyone, store it securely!",
+  "confirm_mnemonic": "Confirm Mnemonic",
+  "confirm_mnemonic_tips": "Click on the words to put them together in the correct order",
+  "confirm_mnemonic_incorrect": "Your mnemonic is incorrect, please try again",
+  "wallet_create_success": "Account created successfully",
+  "wallet_create_success_tips": "Congratulations, your private account has been created successfully",
+  "user_this_account": "Use this private account"
 }
