--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -123,5 +123,38 @@
   "wallet": "钱包",
   "discover": "发现",
   "information": "资讯",
-  "my_page": "我的"
+  "my_page": "我的",
+  "hyn_market": "HYN行情",
+  "view_all": "查看全部",
+  "hyn_price": "HYN指数",
+  "online_exchange": "上线交易所",
+  "rmb": "人民币",
+  "map3_node_introduction": "map3节点",
+  "private_and_safety": "私密和安全",
+  "create_wallet": "创建钱包",
+  "import_wallet": "导入钱包",
+  "private_wallet_tips": "账户私钥永远不会离开你的设备",
+  "create_wallet_tips": "创建一个私密账户",
+  "create_wallet_name_label": "钱包名称",
+  "input_wallet_name_hint": "请输入钱包名称",
+  "input_wallet_name_length_hint": "请输入6位以内的名称",
+  "create_wallet_password_label": "钱包密码",
+  "input_wallet_password_length_hint": "请输入至少6位的密码",
+  "input_password_again_hint": "请再次输入密码",
+  "password_not_equal_hint": "密码不一致",
+  "input_confirm_wallet_password_hint": "请再次输入至少6位数的钱包密码",
+  "next": "继续",
+  "account_backup_notice": "现在备份你的账户",
+  "account_backup_next_step_notice": "在下一步中，您将看到12个允许您恢复账户的单词",
+  "lossz_wallet_mnemonic_notice": "我明白，如果我丢失了恢复单词，我将无法访问我的钱包",
+  "continue_text": "继续",
+  "your_mnemonic": "您的恢复短语",
+  "save_mnemonic_notice": "按正确的顺序记下或复制这些单词，并将他们保存在安全的地方。",
+  "save_mnemonic_safe_notice": "永远不要与任何人共享恢复短语，安全的存储它！",
+  "confirm_mnemonic": "输入恢复短语",
+  "confirm_mnemonic_tips": "点击单词，把他们按正确的顺序放在一起",
+  "confirm_mnemonic_incorrect": "您的恢复短语不正确，请重新尝试",
+  "wallet_create_success": "账户创建成功",
+  "wallet_create_success_tips": "恭喜，你的私密账户已经创建成功",
+  "user_this_account": "使用该私密账户"
 }
