add wallet translate

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -157,5 +157,46 @@
   "confirm_mnemonic_incorrect": "Your mnemonic is incorrect, please try again",
   "wallet_create_success": "Account created successfully",
   "wallet_create_success_tips": "Congratulations, your private account has been created successfully",
-  "user_this_account": "Use this private account"
+  "user_this_account": "Use this private account",
+  "import_account": "Import Account",
+  "illegal_mnemonic": "illegal mnemonic",
+  "input_resume_mnemonic": "Enter backup mnemonics separated by spaces",
+  "please_input_mnemonic": "Please enter mnemonic",
+  "paste": "paste",
+  "wallet_name_label": "Wallet Name",
+  "import_account_fail": "Import Fail",
+  "import": "Import",
+  "import_account_success": "Account import successful",
+  "import_account_tips": "Congratulations, your private wallet has been successfully imported",
+  "wallet_manage": "Wallet Manage",
+  "wallet_setting": "Wallet Setting",
+  "wallet_name": "Wallet Name",
+  "please_input_wallet_name": "Please input wallet name",
+  "backup_option": "Backuo Options",
+  "show_mnemonic_label": "Show Mnemonic",
+  "wallet_setting_backup_notice": "If you cannot access this device, your funds will not be recovered unless you back it up!",
+  "delete_wallet_success": "Delete Success",
+  "delete_wallet_fail": "Delete Fail",
+  "wallet_password_error": "incorrect password",
+  "delete": "Delete",
+  "backup_notice_label": "Backup Tips",
+  "backup_wallet_notice_text1": "Obtaining mnemonic words equals ownership of wallet assets",
+  "backup_wallet_mnemonic_title": "Backup mnemonics",
+  "backup_wallet_mnemonic_text": "Use paper and pen to copy mnemonics correctly\nIf your phone is lost or stolen. Damage, mnemonics will be able to recover your assets",
+  "backup_offline_save_title": "Offline storage",
+  "backup_offline_save_text": "Safekeeping to a safe place in an isolated network\nDo not share mnemonics in a networked environment, such as emails, photo albums, social applications, etc.",
+  "extract_mnemonic_fail": "Mnemonic extraction failed",
+  "safety_verification": "Safety Verification",
+  "wallet_password_label": "Wallet password",
+  "please_input_wallet_password_hint": "Please enter wallet password",
+  "backup_finish": "Backup Finish",
+  "finish": "Finish",
+  "send": "Send",
+  "receiver": "Receive",
+  "copy": "Copy",
+  "received": "Received",
+  "sent": "Sent",
+  "contract_call": "Contract Call",
+  "account_error": "账户错误",
+  "send_symbol": "发送 $symbol"
 }
