--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -140,6 +140,7 @@
   "input_wallet_name_length_hint": "请输入6位以内的名称",
   "create_wallet_password_label": "钱包密码",
   "input_wallet_password_length_hint": "请输入至少6位的密码",
+  "reinput_wallet_password_label": "确认密码",
   "input_password_again_hint": "请再次输入密码",
   "password_not_equal_hint": "密码不一致",
   "input_confirm_wallet_password_hint": "请再次输入至少6位数的钱包密码",
@@ -156,5 +157,46 @@
   "confirm_mnemonic_incorrect": "您的恢复短语不正确，请重新尝试",
   "wallet_create_success": "账户创建成功",
   "wallet_create_success_tips": "恭喜，你的私密账户已经创建成功",
-  "user_this_account": "使用该私密账户"
+  "user_this_account": "使用该私密账户",
+  "import_account": "导入账户",
+  "illegal_mnemonic": "不是合法的助记词",
+  "input_resume_mnemonic": "输入用空格隔开的备份助记词",
+  "please_input_mnemonic": "请输入助记词",
+  "paste": "粘贴",
+  "wallet_name_label": "钱包名称",
+  "import_account_fail": "导入失败",
+  "import": "导 入",
+  "import_account_success": "账户导入成功",
+  "import_account_tips": "恭喜，您的私密钱包已经导入成功",
+  "wallet_manage": "钱包管理",
+  "wallet_setting": "钱包设置",
+  "wallet_name": "钱包名称",
+  "please_input_wallet_name": "请输入钱包名称",
+  "backup_option": "备份选项",
+  "show_mnemonic_label": "显示恢复短语",
+  "wallet_setting_backup_notice": "如果你无法访问这个设备，你的资金将无法找回，除非你备份了！",
+  "delete_wallet_success": "删除成功",
+  "delete_wallet_fail": "删除失败",
+  "wallet_password_error": "密码错误",
+  "delete": "删除",
+  "backup_notice_label": "备份提示",
+  "backup_wallet_notice_text1": "获得助记词等于拥有钱包资产所有权",
+  "backup_wallet_mnemonic_title": "备份助记次",
+  "backup_wallet_mnemonic_text": "使用纸和笔正确抄写助记词\n如果你的手机丢失、被盗。损坏，助记词将可以恢复你的资产",
+  "backup_offline_save_title": "离线保管",
+  "backup_offline_save_text": "妥善保管至隔离网络的安全地方\n请勿讲助记词在联网环境下分享和存储，比如邮件、相册、社交应用等",
+  "extract_mnemonic_fail": "提取助记词失败",
+  "safety_verification": "安全验证",
+  "wallet_password_label": "钱包密码",
+  "please_input_wallet_password_hint": "请输入钱包密码",
+  "backup_finish": "备份完成",
+  "finish": "完成",
+  "send": "发送",
+  "receiver": "接收",
+  "copy": "复制",
+  "received": "已收到",
+  "sent": "已发送",
+  "contract_call": "智能合约调用",
+  "account_error": "账户错误",
+  "send_symbol": "发送 $symbol"
 }
