add wallet translate

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -197,6 +197,25 @@
   "received": "Received",
   "sent": "Sent",
   "contract_call": "Contract Call",
-  "account_error": "账户错误",
-  "send_symbol": "发送 $symbol"
+  "account_error": "Account Error",
+  "send_symbol": "Send $symbol",
+  "receiver_address": "Receiver Address",
+  "receiver_address_not_empty_hint": "Receiver address is empty",
+  "send_count_label": "$symbol Quantity",
+  "all": "ALL",
+  "input_corrent_count_hint": "Please enter the correct quantity",
+  "input_count_over_balance": "Over balance",
+  "account_is_empty": "Account is empty",
+  "gas_fee": "Transaction Fee",
+  "speed_slow": "Slow",
+  "speed_normal": "Normal",
+  "speed_fast": "Fast",
+  "please_waiting": "Waiting",
+  "transfer_submitted": "The transfer has been submitted",
+  "password_incorrect": "incorrect password",
+  "transfer_fail": "Transfer failed",
+  "eth_balance_not_enough_for_gas_fee": "ETH balance is insufficient to pay network fees",
+  "receiver_symbol": "Receive ${symbol}",
+  "address_copied": "Address copied",
+  "my_symbol_address": "My ${symbol} Address:"
 }
