--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -198,5 +198,24 @@
   "sent": "已发送",
   "contract_call": "智能合约调用",
   "account_error": "账户错误",
-  "send_symbol": "发送 $symbol"
+  "send_symbol": "发送 $symbol",
+  "receiver_address": "接收者地址",
+  "receiver_address_not_empty_hint": "接收地址不能位空",
+  "send_count_label": "$symbol 数量",
+  "all": "全部",
+  "input_corrent_count_hint": "请输入正确的数量",
+  "input_count_over_balance": "超过余额",
+  "account_is_empty": "账户为空",
+  "gas_fee": "网络费用",
+  "speed_slow": "慢",
+  "speed_normal": "平均值",
+  "speed_fast": "快",
+  "please_waiting": "请稍后",
+  "transfer_submitted": "转账已提交",
+  "password_incorrect": "密码错误",
+  "transfer_fail": "转账失败",
+  "eth_balance_not_enough_for_gas_fee": "ETH余额不足支付网络费用",
+  "receiver_symbol": "接收 ${symbol}",
+  "address_copied": "地址已复制",
+  "my_symbol_address": "我的${symbol}接收地址:"
 }
