add discover translate

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -217,5 +217,35 @@
   "eth_balance_not_enough_for_gas_fee": "ETH balance is insufficient to pay network fees",
   "receiver_symbol": "Receive ${symbol}",
   "address_copied": "Address copied",
-  "my_symbol_address": "My ${symbol} Address:"
+  "my_symbol_address": "My ${symbol} Address:",
+  "dmap_document_title": "DMap Integration Document",
+  "document_optimization": "Document optimization ...",
+  "map_dmap": "Map DMap",
+  "dmap_tools": "Tools",
+  "private_sharing": "Private Share",
+  "private_sharing_text": "Share encrypted locations, never leak location information",
+  "dmap_life": "Life Guide",
+  "embassy_guide": "Embassy Guide",
+  "global_embassies": "Global embassies",
+  "stay_tuned": "Stay tuned",
+  "discount_map": "Discount Map",
+  "not_open_yet": "Not open yet",
+  "police_security_station": "Police Station",
+  "police_station_text": "Have trouble finding the police",
+  "more_dmap": "More DMap applications are continuously added ~",
+  "close": "Close",
+  "start_encryption": "Encryption",
+  "no_data": "No Data",
+  "hot_area": "Hot Area",
+  "recommended_area": "Recommended Area",
+  "no_fill_in": "No Fill In",
+  "private_service": "Private Service",
+  "service_hours": "Time",
+  "service_area": "Area",
+  "service_description": "Description",
+  "nightlife_guide": "Nightlife Guide",
+  "no_detail_address": "No detailed address",
+  "department": "Department",
+  "area": "Area",
+  "operating_hours": "Time"
 }
