--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -217,5 +217,35 @@
   "eth_balance_not_enough_for_gas_fee": "ETH余额不足支付网络费用",
   "receiver_symbol": "接收 ${symbol}",
   "address_copied": "地址已复制",
-  "my_symbol_address": "我的${symbol}接收地址:"
+  "my_symbol_address": "我的${symbol}接收地址:",
+  "dmap_document_title": "DMap地图应用接入文档",
+  "document_optimization": "文档优化中...",
+  "map_dmap": "地图DMap",
+  "dmap_tools": "工具类",
+  "private_sharing": "私密分享",
+  "private_sharing_text": "分享加密位置，绝不泄露位置信息",
+  "dmap_life": "生活指引",
+  "embassy_guide": "大使馆指南",
+  "global_embassies": "全球大使馆",
+  "stay_tuned": "敬请期待",
+  "discount_map": "折扣地图",
+  "not_open_yet": "暂未开放",
+  "police_security_station": "警察安全站",
+  "police_station_text": "有困难，找警察",
+  "more_dmap": "更多DMap应用持续添加~",
+  "close": "关闭",
+  "start_encryption": "开始加密",
+  "no_data": "暂无数据",
+  "hot_area": "热门地区",
+  "recommended_area": "推荐地区",
+  "no_fill_in": "暂无填写",
+  "private_service": "私密服务",
+  "service_hours": "服务时间",
+  "service_area": "区域",
+  "service_description": "描述",
+  "nightlife_guide": "夜生活指南",
+  "no_detail_address": "暂无详细地址",
+  "department": "部门",
+  "area": "区域",
+  "operating_hours": "工作时间"
 }
