add my page translate

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -257,5 +257,10 @@
   "video": "Video",
   "audio": "Audio",
   "domestic_video": "Domestic",
-  "foreign_video": "Foreign"
+  "foreign_video": "Foreign",
+  "titan_encrypted_map_ecology": "Titan Encrypted Map Ecology",
+  "share_app": "Share App",
+  "dapp_setting": "DApp Setting",
+  "private_share": "Private Share",
+  "private_share_receive_address": "Receive Address : ${shortAddress}"
 }
