fix some Korean translate

--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -229,7 +229,7 @@
   "global_embassies": "글로벌 대사관",
   "stay_tuned": "계속 지켜봐 주시기 바랍니다",
   "discount_map": "할인지도",
-  "not_open_yet": "아직 열지 않았습니다",
+  "not_open_yet": "기대하세요",
   "police_security_station": "경찰 보안 국",
   "police_station_text": "경찰을 찾는 데 어려움이있다",
   "more_dmap": "더 많은 DMap 애플리케이션이 계속 추가되고 있습니다",
@@ -248,10 +248,10 @@
   "department": "학과",
   "area": "지역",
   "operating_hours": "근무 시간",
-  "kais_talk": "케이시 스토리",
-  "latest_news": "최신 뉴스",
-  "official_announcement": "공식 발표",
-  "information_guide": "튜토리얼",
+  "kais_talk": "Kai's Talk",
+  "latest_news": "뉴스",
+  "official_announcement": "발표",
+  "information_guide": "안내서",
   "information_video": "비디오",
   "article": "기사",
   "video": "비디오",
