remove some unused translate

--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -1,7 +1,6 @@
 {
   "app_name": "타이탄",
   "network_request_err": "网络请求错误,状态码: $code",
-  "offline_map": "오프라인지도",
   "route": "노선",
   "no_recommended_route": "추천 경로가 없습니다",
   "less_than_1_min": "일분 미만",
@@ -10,7 +9,6 @@
   "n_minute": "${minute}분",
   "km": "${km}킬로미터",
   "distance": "${distance}남",
-  "my_position": "내 위치",
   "official_website": "공식 웹 사이트",
   "forum": "받는 사람",
   "telegram": "전보",
@@ -81,25 +79,9 @@
   "enter": "입력",
   "copyed": "복사",
   "Clean": "명확한 흔적",
-  "map_store": "맵 스토어",
-  "more": "더 많은",
-  "payment_failed": "지불 실패",
-  "service_type": "서비스 유형",
-  "payment_type": "지불 유형",
-  "cancel_payment": "지불 취소",
-  "cancel": "취소",
-  "pay": "지불",
-  "ordering": "주문하는 중 …",
-  "waiting_for_payment_result": "지불 결과 대기 …",
-  "payment_successful": "구매 성공",
-  "monthly_payment": "한 달마다 유효하다",
   "time": "영업 시간",
   "services": "서비스",
   "remark": "비고",
-  "buy_more_map": "더 많은 지도를 구입하다",
-  "click_to_purchase": "구매하시려면 누르십시오",
-  "empty_map_notice_message": "아직 어떤 지도도 사지 않았습니다.",
-  "your_purchased_map": "구매하신 지도",
   "search_or_decode": "검색 / 디코딩",
   "map3_global_nodes": "map3 글로벌 노드",
   "global_nodes": "글로벌 노드",
@@ -128,7 +110,7 @@
   "view_all": "모두 보기",
   "hyn_price": "HYN 지수",
   "online_exchange": "온라인 거래소",
-  "rmb": "RMB",
+  "rmb": " CNY",
   "map3_node_introduction": "map3 노드",
   "private_and_safety": "비밀과 보안",
   "create_wallet": "지갑 만들기",
