--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -1,7 +1,6 @@
 {
   "app_name": "泰坦",
   "network_request_err": "网络请求错误,状态码: $code",
-  "offline_map": "离线地图",
   "route": "路线",
   "no_recommended_route": "暂无推荐路线",
   "less_than_1_min": "小于1分钟",
@@ -10,7 +9,6 @@
   "n_minute": "${minute}分钟",
   "km": "${km}公里",
   "distance": "${distance}米",
-  "my_position": "我的位置",
   "official_website": "官网",
   "forum": "论坛",
   "telegram": "电报群",
@@ -81,25 +79,9 @@
   "enter": "进入",
   "copyed": "已拷贝",
   "Clean": "清除痕迹",
-  "map_store": "地图商店",
-  "more": "更多",
-  "payment_failed": "支付失败",
-  "service_type": "服务类型",
-  "payment_type": "支付类型",
-  "cancel_payment": "取消支付",
-  "cancel": "取消",
-  "pay": "支付",
-  "ordering": "正在下单...",
-  "waiting_for_payment_result": "等待支付结果...",
-  "payment_successful": "购买成功",
-  "monthly_payment": "一个月有效",
   "time": "营业时间",
   "services": "服务",
   "remark": "备注",
-  "buy_more_map": "购买更多地图",
-  "click_to_purchase": "点击前往购买",
-  "empty_map_notice_message": "你尚未购买任何地图",
-  "your_purchased_map": "您购买的地图",
   "search_or_decode": "搜索 / 解码位置密文",
   "map3_global_nodes": "map3全球节点",
   "global_nodes": "全球节点",
@@ -184,7 +166,7 @@
   "backup_wallet_mnemonic_title": "备份助记次",
   "backup_wallet_mnemonic_text": "使用纸和笔正确抄写助记词\n如果你的手机丢失、被盗。损坏，助记词将可以恢复你的资产",
   "backup_offline_save_title": "离线保管",
-  "backup_offline_save_text": "妥善保管至隔离网络的安全地方\n请勿讲助记词在联网环境下分享和存储，比如邮件、相册、社交应用等",
+  "backup_offline_save_text": "妥善保管至隔离网络的安全地方\n请勿将助记词在联网环境下分享和存储，比如邮件、相册、社交应用等",
   "extract_mnemonic_fail": "提取助记词失败",
   "safety_verification": "安全验证",
   "wallet_password_label": "钱包密码",
@@ -200,7 +182,7 @@
   "account_error": "账户错误",
   "send_symbol": "发送 $symbol",
   "receiver_address": "接收者地址",
-  "receiver_address_not_empty_hint": "接收地址不能位空",
+  "receiver_address_not_empty_hint": "接收地址不能为空",
   "send_count_label": "$symbol 数量",
   "all": "全部",
   "input_corrent_count_hint": "请输入正确的数量",
