--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -247,5 +247,35 @@
   "private_share_receive_address": "Receive Address : ${shortAddress}",
   "navigation": "Start",
   "my_location": "My Location",
-  "my_position": "My Location"
+  "my_position": "My Location",
+  "logining": "Logining",
+  "login": "Login",
+  "email_label": "Email",
+  "email_format_error_hint": "Email format is wrong, please enter the correct email",
+  "please_input_email_hint": "please input your email",
+  "password_label": "Password",
+  "password_format_error_message": "The password format is incorrect. Please enter at least 6 characters",
+  "please_input_password_hint": "Please enter the password",
+  "forget_password": "forget password",
+  "register_account": "register",
+  "processing": "processing",
+  "submit": "submit",
+  "modify_success": "Successfully modified",
+  "reset_account_password": "Reset account password",
+  "verification_code": "Verification code",
+  "please_input_verification_code": "Please enter 6 digit verification code",
+  "get_verification_code_again": "Reacquire ${countdownTime}",
+  "send_verification_code": "Send",
+  "account_new_password": "New password",
+  "password_length_error_message": "Please enter a password of at least 6 character",
+  "confirm_password_label": "Confirm new password",
+  "register": "register",
+  "register_success": "registration success",
+  "register_email": "register email",
+  "invitation_code": "invitation code",
+  "please_input_invitation_code": "Please enter 6 characters invitation code",
+  "account_password": "account password",
+  "fundz_password": "fund password",
+  "fund_password_format_error_message": "The fund password format is incorrect. Please enter at least 6 characters",
+  "fund_password_length_error_message": "Please enter a fund password of at least 6 character"
 }
