--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -247,5 +247,35 @@
   "private_share_receive_address": "수신 주소:${shortAddress}",
   "navigation": "탐색",
   "my_location": "내 위치",
-  "my_position": "내 위치"
+  "my_position": "내 위치",
+  "logining": "登录中",
+  "login": "登录",
+  "email_label": "邮箱",
+  "email_format_error_hint": "邮箱格式有误，请输入正确的邮箱",
+  "please_input_email_hint": "请输入邮箱",
+  "password_label": "密码",
+  "password_format_error_message": "密码格式有误，请输入最少6位",
+  "please_input_password_hint": "请输入密码",
+  "forget_password": "忘记密码",
+  "register_account": "注册账号",
+  "processing": "处理中",
+  "submit": "提交",
+  "modify_success": "修改成功",
+  "reset_account_password": "重置账户密码",
+  "verification_code": "验证码",
+  "please_input_verification_code": "请输入6位验证码",
+  "get_verification_code_again": "重新获取 ${countdownTime}",
+  "send_verification_code": "发送验证码",
+  "account_new_password": "账户新密码",
+  "password_length_error_message": "请输入至少6位的密码",
+  "confirm_password_label": "确认新密码",
+  "register": "注册",
+  "register_success": "注册成功",
+  "register_email": "注册邮箱",
+  "invitation_code": "邀请码",
+  "please_input_invitation_code": "请输入6位邀请码",
+  "account_password": "账户密码",
+  "fundz_password": "资金安全密码",
+  "fund_password_format_error_message": "密码格式有误，请输入最少6位",
+  "fund_password_length_error_message": "请输入至少6位的资金密码"
 }
